tests/golden/fixtures/unit-multi-input-undefined-symbol/expected.err
Error: undefined symbol 'missing'
   ╭─[ tests/golden/fixtures/unit-multi-input-undefined-symbol/input.10-main.k65:2:9 ]
   │
 2 │     jsr missing
   │         ───┬───  
   │            ╰───── symbol 'missing' referenced here
───╯
